[tool.poetry]
name = "weibospider"
version = "0.1.0"
description = ""
authors = ["Peng Rao <raopend@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.11.1"
python-dateutil = "^2.9.0.post0"
sqlalchemy = "^2.0.29"
mysql-connector-python = "^8.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
